--- a/src/sections/About/about.scss
+++ b/src/sections/About/about.scss
@@ -1,73 +1,67 @@
 @use "../../general_styles/styles" as styles;
 
 .about {
+  margin-top: 52.5px;
   @include styles.centerFlex;
-  width: 100vw;
-  height: 100vh;
-  padding: 20px;
+  @include styles.sectionStyles;
 
-  .about-main {
-    max-width: 1500px;
+  .about-header {
+    @include styles.headerStyles;
+
+    h2 {
+      @include styles.styledText;
+    }
+  }
+
+  .about-container {
+    @include styles.centerFlex;
+    flex-direction: column;
     width: 100%;
+    gap: 40px;
 
-    .about-header {
-      @include styles.headerStyles;
-
-      h2 {
-        @include styles.styledText;
-      }
+    .terminal-container {
+      flex: 1;
+      height: 150px;
     }
 
-    .about-container {
+    .education {
+      flex: 1;
       @include styles.centerFlex;
       flex-direction: column;
-      width: 100%;
-      gap: 40px;
 
-      .terminal-container {
-        flex: 1;
-        height: 150px;
-      }
+      .education-header {
+        margin-bottom: 20px;
+        width: 100%;
 
-      .education {
-        flex: 1;
-        @include styles.centerFlex;
-        flex-direction: column;
-
-        .education-header {
-          margin-bottom: 20px;
-          width: 100%;
-
-          h3 {
-            @include styles.styledText;
-            font-size: 2.5rem;
-            border-right: 1px solid transparent;
-            margin-bottom: -10px;
-          }
-
-          .line {
-            height: 2px;
-            background: styles.$gradient;
-          }
+        h3 {
+          @include styles.styledText;
+          font-size: 2.5rem;
+          border-right: 1px solid transparent;
+          margin-bottom: -10px;
         }
 
-        ul {
-          @include styles.centerFlex;
-          flex-direction: column;
-          gap: 20px;
-          width: 100%;
+        .line {
+          height: 2px;
+          background: styles.$gradient;
+        }
+      }
 
-          li {
-            width: 150px;
-            padding: 5px;
+      ul {
+        @include styles.centerFlex;
+        flex-direction: column;
+        gap: 20px;
+        width: 100%;
 
-            img {
-              border-radius: 5px;
-              background-color: white;
-              width: 100%;
-              height: auto;
-              padding: 2px;
-            }
+        li {
+          width: 150px;
+          padding: 5px;
+
+          img {
+            border-radius: 5px;
+            background-color: white;
+            width: 100%;
+            height: auto;
+            padding: 2px;
           }
         }
       }
@@ -76,14 +70,10 @@
 }
 
 @media screen and (min-width: 750px) {
-    .about {
-
-        .about-main {
-
-            .about-container {
-                flex-direction: row;
-                align-items: flex-start;
-            }
-        }
+  .about {
+    .about-container {
+      flex-direction: row;
+      align-items: flex-start;
     }
+  }
 }
