add section styles mixin to scss scetions

--- a/src/general_styles/_styles.scss
+++ b/src/general_styles/_styles.scss
@@ -46,6 +46,7 @@ $main-pink: rgb(255, 0, 211);
 }
 
 @mixin sectionStyles {
+  margin-top: 52.5px;
   padding: 50px 20px;
   flex-direction: column;
   width: 100%;
