--- a/src/sections/Contact/contact.scss
+++ b/src/sections/Contact/contact.scss
@@ -2,14 +2,7 @@
 
 .contact {
   @include styles.centerFlex;
-  width: 100vw;
-  height: 70vh;
-  padding: 20px;
-  flex-direction: column;
-
-  .contact-container {
-    max-width: 1500px;
-    width: 100%;
+  @include styles.sectionStyles;
 
     .contact-header {
       @include styles.headerStyles;
@@ -52,5 +45,4 @@
         align-self: center;
       }
     }
-  }
 }
