Change max width of cards-container

--- a/src/sections/Projects/projects.scss
+++ b/src/sections/Projects/projects.scss
@@ -15,6 +15,7 @@
     .cards-container {
         @include styles.centerFlex;
       width: 100%;
+      max-width: 1250px;
       flex-direction: column;
       gap: 20px;
 
