--- a/src/sections/Skills/skills.scss
+++ b/src/sections/Skills/skills.scss
@@ -12,65 +12,64 @@
     }
   }
 
-  .scroll-container {
-    position: relative;
+  .scroll {
+    display: flex;
     width: 100%;
-    min-width: 400px;
-    height: 300px;
-    overflow-x: hidden;
+    max-width: 700px;
+    overflow: hidden;
+    mask-image: linear-gradient(
+      50deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
 
-    .scroll-element {
-      @include styles.centerFlex;
-      width: inherit;
-      height: inherit;
-      position: absolute;
-      left: 0%;
-      top: 0%;
-      gap: 10px;
+    div {
+      white-space: nowrap;
+      animation: scroll 20s linear infinite;
+      animation-delay: -20s;
 
-      .skill-element {
-        @include styles.centerFlex;
-        flex-direction: column;
-        gap: 20px;
-        height: fit-content;
-        width: 200px;
-        text-align: center;
-        font-size: 5vmin;
+      &:nth-child(2) {
+        animation: scroll2 20s linear infinite;
+        animation-delay: -10s;
+      }
 
-        @media screen and (min-width: 480px) {
-            font-size: 2rem;
+      @keyframes scroll {
+        0% {
+          transform: translateX(100%);
         }
-
-        img {
-          width: 100%;
-          height: auto;
+        100% {
+          transform: translateX(-100%);
         }
       }
 
-      &.primary {
-        animation: primary 15s linear infinite;
+      @keyframes scroll2 {
+        0% {
+          transform: translateX(0%);
+        }
+        100% {
+          transform: translateX(-200%);
+        }
       }
 
-      &.secondary {
-        animation: secondary 15s linear infinite;
-      }
-    }
+      span {
+        display: inline-flex;
+        margin: 10px;
+        background: #333;
+        padding: 5px 10px;
+        border-radius: 5px;
+        transition: 0.5s;
+        font-size: 2.5rem;
 
-    @keyframes primary {
-      from {
-        left: 0%;
+        &:hover {
+          background: styles.$main-blue;
+        }
       }
-      to {
-        left: -105%;
-      }
-    }
 
-    @keyframes secondary {
-      from {
-        left: 105%;
-      }
-      to {
-        left: 0%;
+      img {
+        width: 100px;
+        scale: 0.8;
       }
     }
   }
