--- a/src/general_styles/_styles.scss
+++ b/src/general_styles/_styles.scss
@@ -1,56 +1,20 @@
-$gradient: linear-gradient(
-  60deg,
-  rgba(255, 0, 211, 1) 0%,
-  rgba(201, 105, 233, 1) 49%,
-  rgba(0, 215, 255, 1) 100%
-);
+$gradient: linear-gradient(60deg,
+    rgba(255, 0, 211, 1) 0%,
+    rgba(201, 105, 233, 1) 49%,
+    rgba(0, 215, 255, 1) 100%);
 
-$header-gradient: linear-gradient(
-  rgba(255, 0, 211, 1) 0%,
-  rgba(201, 105, 233, 1) 49%,
-  rgba(0, 215, 255, 1) 100%
-);
+$header-gradient: linear-gradient(rgba(255, 0, 211, 1) 0%,
+    rgba(201, 105, 233, 1) 49%,
+    rgba(0, 215, 255, 1) 100%);
 
-$main-blue: rgb(0, 215, 255);
-
-$main-pink: rgb(255, 0, 211);
+$main-blue: rgba(0, 215, 255, 1);
 
 // style groups using mixins
-
-@mixin styledText {
-  font-family: "Cedarville Cursive", cursive;
-  background: $gradient;
-  color: transparent;
-  background-clip: text;
-}
-
-@mixin headerStyles {
-  width: 100%;
-  margin-bottom: 20px;
-
-  h2 {
-    font-size: 3rem;
-    margin-bottom: -10px;
-  }
-
-  .line {
-    height: 2px;
-    background: $gradient;
-  }
-}
 
 @mixin centerFlex {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-@mixin sectionStyles {
-  margin-top: 52.5px;
-  padding: 50px 20px;
-  flex-direction: column;
-  width: 100%;
-  max-width: 1500px;
 }
 
 @mixin styledButton {
@@ -84,6 +48,9 @@ $main-pink: rgb(255, 0, 211);
   }
 }
 
-$min-width: 250px;
-
-$min-height: 600px;
+// responsive breakpoints
+$sm: 640px;
+$md: 768px;
+$lg: 1024px;
+$xl: 1280px;
+$double-xl: 1536px;
