--- a/src/sections/Home/home.scss
+++ b/src/sections/Home/home.scss
@@ -19,6 +19,7 @@
         height: 100%;
         background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
         backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
 
         .home-container {
             @include styles.centerFlex;
