--- a/src/components/AboutOptions/AboutInfo/aboutInfo.scss
+++ b/src/components/AboutOptions/AboutInfo/aboutInfo.scss
@@ -7,6 +7,9 @@
     font-size: 2.1rem;
     text-shadow: rgb(218, 218, 218) 1px 0 10px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 
     @media screen and (min-width: styles.$md) {
         font-size: 2.5rem;
@@ -42,6 +45,7 @@
         transition-duration: 200ms;
         margin-left: -2000px;
         cursor: pointer;
+        font-size: 3rem;
 
         span {
             display: inline-block;
@@ -75,16 +79,6 @@
         &.third {
             animation: slideIn 1s forwards;
             animation-delay: 4s;
-        }
-
-        &.fourth {
-            animation: slideIn 1s forwards;
-            animation-delay: 5s;
-            padding-bottom: 20px;
-
-            @media screen and (min-width: 587px) {
-                padding-bottom: 0;
-            }
         }
     }
 }
