--- a/src/sections/Home/home.scss
+++ b/src/sections/Home/home.scss
@@ -3,107 +3,96 @@
 .home {
     width: 100vw;
     height: 100vh;
+    background-image: url("/assets/bg.png");
+    background-size: cover;
+    position: relative;
     overflow: hidden;
-    background-image: url("/assets/bg.jpg");
-    background-repeat: no-repeat;
-    background-position: top center;
+    display: flex;
+    align-items: center;
 
-    @media screen and (min-width: styles.$md) {
-        height: 400px;
-        background-position: 50% 30%;
+    .moon {
+        position: absolute;
+        top: 200px;
+        right: 20px;
+        width: 40%;
+        max-width: 300px;
+        height: auto;
+        z-index: 5;
+        animation: rotate 40s infinite
     }
 
-    .glass {
-        @include styles.centerFlex;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
+    .saturn {
+        position: absolute;
+        top: 100px;
+        left: 20%;
+        width: 10%;
+        max-width: 100px;
+        z-index: 5;
+    }
 
-        .home-container {
-            @include styles.centerFlex;
-            flex-direction: column;
-            width: 100%;
-            max-width: 700px;
+    .mars {
+        position: absolute;
+        top: 75px;
+        left: 50%;
+        width: 20%;
+        max-width: 200px;
+        z-index: 5;
+        animation: rotate 70s infinite
+    }
 
-            @media screen and (min-width: styles.$md) {
-                flex-direction: row;
-                justify-content: space-between;
-            }
+    p {
+        margin-top: 200px;
+        width: fit-content;
+        height: fit-content;
+        font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        perspective: 1000px;
+        margin-left: 50px;
 
-            .intro {
-                @include styles.centerFlex;
-                flex-direction: column;
-                font-size: 3rem;
-
-                h1 {
-                    font-family: "Cedarville Cursive", cursive;
-                    background: styles.$gradient;
-                    white-space: nowrap;
-                    border-right: 1px solid transparent;
-                    background-clip: text;
-                    color: transparent;
-                    animation: type 1.5s steps(30, end) forwards, blinkingTitle 1.5s forwards;
-                }
-
-                span {
-                    border: 3px solid white;
-                    border-left: 0;
-                    border-right: 0;
-                    padding: 5px 20px;
-                    margin-bottom: 20px;
-                }
-
-                .link-container {
-                    display: flex;
-                    gap: 10px;
-
-                    img {
-                        width: 40px;
-                        height: auto;
-                    }
-                }
-            }
-
-            .dev-svg {
-                width: 80vw;
-                max-width: 300px;
-                height: auto;
-            }
+        @media screen and (min-width: styles.$sm) {
+            font-size: 50px;
         }
 
+        @media screen and (min-width: styles.$lg) {
+            font-size: 70px;
+        }
+
+        @media screen and (min-width: styles.$xl) {
+            font-size: 75px;
+        }
+
+        @media screen and (min-width: styles.$double-xl) {
+            margin-left: 300px;
+        }
+
+        span {
+            transform: rotateY(35deg);
+            font-family: "Anton SC", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            text-shadow: rgb(218, 218, 218) 1px 0 10px;
+        }
+
+        .profile-links {
+            display: flex;
+            transform: rotateY(35deg);
+
+            img {
+                width: 60px;
+                height: 60px;
+                cursor: pointer;
+            }
+        }
     }
 }
 
-@keyframes type {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 100%;
-    }
-}
-
-@keyframes blinkingTitle {
+@keyframes rotate {
     0% {
-        border-right-color: transparent;
-    }
-
-    25% {
-        border-right-color: rgb(255, 0, 255);
-    }
-
-    50% {
-        border-right-color: transparent;
-    }
-
-    75% {
-        border-right-color: rgb(0, 251, 255);
+        rotate: 0deg;
     }
 
     100% {
-        border-right-color: transparent;
+        rotate: 360deg;
     }
 }
