--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,11 @@
+@use "./general_styles/styles" as styles;
+
 :root {
     font-size: 10px;
+
+    @media screen and (min-width: styles.$md) {
+        font-size: 16px;
+    }
 }
 
 * {
@@ -13,6 +19,8 @@
 body {
     background-color: black;
     overflow-x: hidden;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
 }
 
 a,
