--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -15,7 +15,7 @@
         height: 50px;
         padding: 5px 10px;
         justify-content: space-between;
-        max-width: styles.$max-width;
+        max-width: 1000px;
 
         h1 {
             font-family: "Playwrite AT", cursive;
