--- a/src/sections/Home/home.scss
+++ b/src/sections/Home/home.scss
@@ -1,98 +1,148 @@
 @use "../../general_styles/styles" as styles;
 
 .home {
+    @include styles.centerFlex;
     width: 100vw;
     height: 100vh;
     background-image: url("/assets/bg.png");
     background-size: cover;
-    position: relative;
     overflow: hidden;
-    display: flex;
-    align-items: center;
+    position: relative;
+
+    .stars {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        animation: mainSlide linear 150s infinite;
+
+        img {
+            width: auto;
+            height: 100vh;
+        }
+    }
+
+    .waves {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        animation: mainSlide linear 20s infinite;
+        z-index: 20;
+
+        img {
+            height: auto;
+            width: 100vw;
+        }
+    }
+
+    .island {
+        position: absolute;
+        bottom: -30px;
+        width: 80%;
+        height: auto;
+        min-width: 300px;
+        max-width: 850px;
+        z-index: 6;
+    }
 
     .moon {
-        position: absolute;
-        top: 200px;
-        right: 20px;
-        width: 40%;
-        max-width: 300px;
-        height: auto;
-        z-index: 5;
-        animation: rotate 40s infinite
-    }
-
-    .saturn {
-        position: absolute;
-        top: 100px;
-        left: 20%;
-        width: 10%;
-        max-width: 100px;
-        z-index: 5;
-    }
-
-    .mars {
-        position: absolute;
-        top: 75px;
-        left: 50%;
-        width: 20%;
+        width: 60%;
         max-width: 200px;
+        position: absolute;
+        z-index: 12;
+        top: calc(100vh - 97%);
         z-index: 5;
-        animation: rotate 70s infinite
+        left: calc(100vw - 30%);
+        animation: moonSlide 1s forwards;
     }
 
-    p {
-        margin-top: 200px;
-        width: fit-content;
-        height: fit-content;
-        font-size: 40px;
-        display: flex;
-        flex-direction: column;
-        perspective: 1000px;
-        margin-left: 50px;
-
-        @media screen and (min-width: styles.$sm) {
-            font-size: 50px;
-        }
+    .intro {
+        text-align: center;
+        font-weight: bold;
+        text-shadow: rgb(218, 218, 218) 1px 0 10px;
+        z-index: 20;
+        scale: 0;
+        animation: moveIn 1s forwards;
 
         @media screen and (min-width: styles.$lg) {
-            font-size: 70px;
+            margin-top: -100px;
         }
 
-        @media screen and (min-width: styles.$xl) {
-            font-size: 75px;
-        }
-
-        @media screen and (min-width: styles.$double-xl) {
-            margin-left: 300px;
+        h2 {
+            margin-top: -20vh;
+            font-size: 3rem;
+            font-family: "Rock Salt", cursive;
+            font-style: normal;
         }
 
         span {
-            transform: rotateY(35deg);
-            font-family: "Anton SC", sans-serif;
-            font-weight: 400;
+            font-size: 1.4rem;
+            font-family: "Rock Salt", cursive;
             font-style: normal;
-            text-shadow: rgb(218, 218, 218) 1px 0 10px;
         }
 
-        .profile-links {
+        nav {
+            border-top: 2px solid white;
+            border-bottom: 2px solid white;
+            padding: 10px 20px;
+            margin-top: 10px;
+            gap: 20px;
+            font-size: 1.2rem;
             display: flex;
-            transform: rotateY(35deg);
+            justify-content: space-between;
 
-            img {
-                width: 60px;
-                height: 60px;
-                cursor: pointer;
+            @media screen and (min-width: styles.$sm) {
+                font-size: 1.4rem;
+            }
+
+            @media screen and (min-width: styles.$lg) {
+                gap: 40px;
+            }
+
+            a {
+                font-family: "Rock Salt", cursive;
+                font-style: normal;
+                transition-duration: 200ms;
+                white-space: nowrap;
+
+                &:hover {
+                    color: rgb(224, 133, 249);
+                    text-shadow: rgb(215, 69, 255) 1px 0 10px;
+                }
             }
         }
     }
 }
 
-@keyframes rotate {
+@keyframes mainSlide {
     0% {
-        rotate: 0deg;
+        transform: translateX(0%);
     }
 
     100% {
-        rotate: 360deg;
+        transform: translateX(-50%);
+    }
+}
+
+@keyframes moonSlide {
+    from {
+        top: -100vh;
+    }
+
+    to {
+        top: calc(100vh - 97%);
+    }
+}
+
+@keyframes moveIn {
+    from {
+        opacity: 0;
+        scale: 0;
+    }
+
+    to {
+        opacity: 1;
+        scale: 1;
     }
 }
