--- a/src/sections/Contact/contact.scss
+++ b/src/sections/Contact/contact.scss
@@ -1,26 +1,25 @@
 @use "../../general_styles/styles" as styles;
 
 .contact {
-    @include styles.centerFlex;
+    display: flex;
+    justify-content: center;
     width: 100vw;
     height: 500px;
-    padding: 20px 10px;
+    padding: 30px 10vw 10vh;
+    background-image: linear-gradient(to bottom, #00011c 0%, black 90%);
 
     .contact-container {
         display: flex;
-        align-items: center;
         width: 100%;
-        max-width: 1200px;
+        max-width: styles.$max-width;
         height: 100%;
         flex-direction: column;
 
         h2 {
-            font-size: 3rem;
-            background: styles.$gradient;
-            background-clip: text;
-            color: transparent;
-            font-family: "Cedarville Cursive", cursive;
+            @include styles.headerFont;
+            font-size: 2rem;
             margin-bottom: 30px;
+            text-shadow: rgb(220, 220, 220) 1px 0 7px;
         }
 
         form {
@@ -31,10 +30,11 @@
 
             input,
             textarea {
+                font-size: 1.3rem;
                 padding: 5px 20px;
                 width: 100%;
-                max-width: 700px;
-                background-color: rgb(78, 78, 78);
+                max-width: 800px;
+                background-color: rgb(60, 60, 60);
                 color: white;
                 border-radius: 5px;
                 border: 1px solid rgb(188, 188, 188);
@@ -42,6 +42,12 @@
 
                 &::-webkit-input-placeholder {
                     color: rgb(190, 190, 190);
+                }
+
+                &:focus {
+                    -webkit-box-shadow: 0px 0px 10px -2px rgba(220, 220, 220, 1);
+                    -moz-box-shadow: 0px 0px 10px -2px rgba(220, 220, 220, 1);
+                    box-shadow: 0px 0px 10px -2px rgba(220, 220, 220, 1);
                 }
             }
 
@@ -67,6 +73,7 @@
                 background-color: rgb(0, 68, 152);
                 border: 1px solid white;
                 cursor: pointer;
+                font-size: 1.3rem;
 
                 &:hover {
                     background-color: rgb(67, 141, 231);
